Fixed margin/padding for recipe card on mobile

--- a/src/styles/RecipeCard.css
+++ b/src/styles/RecipeCard.css
@@ -1,13 +1,14 @@
 .recipe-card {
   background-color: #eee;
   /* background-color: rgba(146, 131, 121, 0.75); */
-  margin: 0px 25px 25px 25px;
+  margin: 0px 25px 50px 25px;
+  padding-top: 10px;
   border-radius: 10px;
   box-shadow: 0px 5px 10px rgba(120, 120, 120, 1);
 }
 
 .recipe-control {
-  padding-top: 20px;
+  padding-top: 10px;
 }
 
 .recipe-control > button {
